Update to Java 11 and separate uberjars