@@ -1,192 +1,28 @@
-
 import edu.wpi.first.wpilib.versioning.ReleaseType
 import org.gradle.api.Project
-import org.gradle.api.plugins.quality.FindBugs
-import org.gradle.api.tasks.wrapper.Wrapper
+import org.gradle.api.publish.maven.MavenPublication
+import org.gradle.jvm.tasks.Jar
 import org.gradle.testing.jacoco.tasks.JacocoReport
+import java.time.Instant
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 buildscript {
     repositories {
         mavenCentral()
-    }
-    dependencies {
-        classpath("org.junit.platform:junit-platform-gradle-plugin:1.0.0")
+        jcenter()
     }
 }
 plugins {
-    application
     `maven-publish`
     jacoco
     java
     checkstyle
+    application
     pmd
-    id("edu.wpi.first.wpilib.versioning.WPILibVersioningPlugin") version "2.0"
+    id("edu.wpi.first.wpilib.versioning.WPILibVersioningPlugin") version "2.2"
     id("com.github.johnrengelman.shadow") version "2.0.1"
-    id("com.diffplug.gradle.spotless") version "3.5.1"
-}
-
-apply {
-    plugin("pmd")
-    plugin("findbugs")
-    plugin("jacoco")
-    plugin("org.junit.platform.gradle.plugin")
-}
-
-group = "edu.wpi.first.wpilib"
-
-// Spotless is used to lint and reformat source files.
-spotless {
-    kotlinGradle {
-        // Configure the formatting of the Gradle Kotlin DSL files (*.gradle.kts)
-        ktlint("0.9.1")
-        trimTrailingWhitespace()
-        indentWithSpaces()
-        endWithNewline()
-    }
-    freshmark {
-        trimTrailingWhitespace()
-        indentWithSpaces()
-        endWithNewline()
-    }
-    format("extraneous") {
-        target("src/**/*.fxml", "src/**/*.css", "*.xml", "*.yml")
-        trimTrailingWhitespace()
-        indentWithSpaces()
-        endWithNewline()
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile(group = "edu.wpi.first.ntcore", name = "ntcore-java", version = "4.+")
-    compile(group = "edu.wpi.first.wpiutil", name = "wpiutil-java", version = "3.+")
-    compile(group = "org.controlsfx", name = "controlsfx", version = "8.40.14")
-    compile(group = "com.google.guava", name = "guava", version = "23.0")
-
-    runtime(group = "edu.wpi.first.ntcore", name = "ntcore-jni", version = "4.+", classifier = "all")
-
-    fun junitJupiter(name: String, version: String = "5.0.0") =
-            create(group = "org.junit.jupiter", name = name, version = version)
-    fun testFx(name: String, version: String = "4.0.+") =
-            create(group = "org.testfx", name = name, version = version)
-
-    testCompile(junitJupiter(name = "junit-jupiter-api"))
-    testCompile(junitJupiter(name = "junit-jupiter-engine"))
-    testCompile(junitJupiter(name = "junit-jupiter-params"))
-    testCompile(testFx(name = "testfx-core", version = "4.0.7-alpha"))
-    testCompile(testFx(name = "testfx-junit5", version = "4.0.6-alpha"))
-    testCompile(group = "com.google.guava", name = "guava-testlib", version = "23.0")
-
-    testRuntime(testFx(name = "openjfx-monocle", version = "8u76-b04"))
-    testRuntime(group = "org.junit.platform", name = "junit-platform-launcher", version = "1.0.0")
-
-}
-
-application {
-    mainClassName = "edu.wpi.first.outlineviewer.OutlineViewer"
-}
-
-checkstyle {
-    configFile = file("$rootDir/checkstyle.xml")
-    toolVersion = "8.1"
-}
-
-pmd {
-    isConsoleOutput = true
-    sourceSets = setOf(java.sourceSets["main"], java.sourceSets["test"])
-    reportsDir = file("${project.buildDir}/reports/pmd")
-    ruleSetFiles = files(file("$rootDir/pmd-ruleset.xml"))
-    ruleSets = emptyList()
-}
-
-findbugs {
-    sourceSets = setOf(java.sourceSets["main"], java.sourceSets["test"])
-    effort = "max"
-}
-
-tasks.withType<FindBugs> {
-    reports {
-        xml.isEnabled = false
-        emacs.isEnabled = true
-    }
-    finalizedBy(task("${name}Report") {
-        mustRunAfter(this@withType)
-        doLast {
-            this@withType
-                    .reports
-                    .emacs
-                    .destination
-                    .takeIf { it.exists() }
-                    ?.readText()
-                    .takeIf { !it.isNullOrBlank() }
-                    ?.also { logger.warn(it) }
-        }
-    })
-}
-
-tasks.withType<JacocoReport> {
-    reports {
-        xml.isEnabled = true
-        html.isEnabled = true
-    }
-}
-afterEvaluate {
-    val junitPlatformTest : JavaExec by tasks
-    jacoco {
-        applyTo(junitPlatformTest)
-    }
-    task<JacocoReport>("jacocoJunit5TestReport") {
-        executionData(junitPlatformTest)
-        sourceSets(java.sourceSets["main"])
-        sourceDirectories = files(java.sourceSets["main"].allSource.srcDirs)
-        classDirectories = files(java.sourceSets["main"].output)
-    }
-}
-
-/*
-     * Allows you to run the UI tests in headless mode by calling gradle with the -Pheadless argument
-     */
-if (project.hasProperty("jenkinsBuild") || project.hasProperty("headless")) {
-    println("Running UI Tests Headless")
-    junitPlatform {
-        filters {
-            tags {
-                /*
-                 * A category for UI tests that cannot run in headless mode, ie work properly with real windows
-                 * but not with the virtualized ones in headless mode.
-                 */
-                exclude("NonHeadlessTests")
-            }
-        }
-    }
-    tasks {
-        "junitPlatformTest"(JavaExec::class) {
-            jvmArgs = listOf(
-                    "-Djava.awt.headless=true",
-                    "-Dtestfx.robot=glass",
-                    "-Dtestfx.headless=true",
-                    "-Dprism.order=sw",
-                    "-Dprism.text=t2k"
-            )
-        }
-    }
-}
-
-publishing {
-    publications {
-        create<MavenPublication>("OutlineViewer") {
-            artifactId = "OutlineViewer"
-            getWPILibVersion()?.let { version = it }
-            val shadowJar: ShadowJar by tasks
-            artifact (shadowJar) {
-                classifier = null
-            }
-        }
-    }
+    id("com.diffplug.gradle.spotless") version "3.13.0"
+    id("com.github.spotbugs") version "1.6.4"
 }
 
 // Ensure that the WPILibVersioningPlugin is setup by setting the release type, if releaseType wasn't
@@ -197,27 +33,220 @@ if (!hasProperty("releaseType")) {
     }
 }
 
+// Only load the project version once, then share it
+val projectVerion = getWPILibVersion()
+
+version = projectVerion
+
+val theMainClassName = "edu.wpi.first.outlineviewer.Main"
+
+// Note: plugins should override this
+tasks.withType<Jar>().configureEach {
+    manifest {
+        attributes["Implementation-Version"] = project.version as String
+        attributes["Built-Date"] = Instant.now().toString()
+        attributes["Main-Class"] = theMainClassName
+    }
+}
+
+application {
+    mainClassName = theMainClassName
+    applicationDefaultJvmArgs = listOf(
+            "-Xverify:none",
+            "-Dprism.order=d3d,es2,sw"
+    )
+}
+
+repositories {
+    mavenCentral()
+}
+
+// Spotless is used to lint and reformat source files.
+spotless {
+    kotlinGradle {
+        ktlint("0.24.0")
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
+    }
+    format("extraneous") {
+        target("Dockerfile", "*.sh", "*.yml")
+        trimTrailingWhitespace()
+        indentWithSpaces()
+        endWithNewline()
+    }
+}
+
+createNativeConfigurations()
+
+dependencies {
+    // JavaFX dependencies
+    javafx("base")
+    javafx("controls")
+    javafx("fxml")
+    javafx("graphics")
+
+    val ntcoreVersion = "2018.4.+"
+    val wpiUtilVersion = "2018.4.+"
+
+    compile(group = "edu.wpi.first.ntcore", name = "ntcore-java", version = ntcoreVersion)
+    native(group = "edu.wpi.first.ntcore", name = "ntcore-jni", version = ntcoreVersion, classifierFunction = ::wpilibClassifier)
+    compile(group = "edu.wpi.first.wpiutil", name = "wpiutil-java", version = wpiUtilVersion)
+
+    compile(group = "com.google.guava", name = "guava", version = "23.0")
+    compile(group = "org.controlsfx", name = "controlsfx", version = "9.0.0")
+
+    fun junitJupiter(name: String, version: String = "5.2.0") =
+        create(group = "org.junit.jupiter", name = name, version = version)
+    fun testFx(name: String, version: String = "4.0.13-alpha") =
+        create(group = "org.testfx", name = name, version = version)
+
+    testCompile(junitJupiter(name = "junit-jupiter-api"))
+    testCompile(junitJupiter(name = "junit-jupiter-engine"))
+    testCompile(junitJupiter(name = "junit-jupiter-params"))
+    testCompile(group = "com.google.guava", name = "guava-testlib", version = "23.0")
+    testCompile(testFx(name = "testfx-core"))
+    testCompile(testFx(name = "testfx-junit5"))
+
+    testRuntime(testFx(name = "openjfx-monocle", version = "jdk-9+181"))
+    testRuntime(group = "org.junit.platform", name = "junit-platform-launcher", version = "1.0.0")
+}
+
+checkstyle {
+    toolVersion = "8.12"
+}
+
+pmd {
+    toolVersion = "6.7.0"
+    isConsoleOutput = true
+    sourceSets = setOf(java.sourceSets["main"])
+    reportsDir = file("${project.buildDir}/reports/pmd")
+    ruleSetFiles = files(file("$rootDir/pmd-ruleset.xml"))
+    ruleSets = emptyList()
+}
+
+tasks.withType<JavaCompile> {
+    // UTF-8 characters are used in menus
+    options.encoding = "UTF-8"
+}
+
+jacoco {
+    toolVersion = "0.8.2"
+}
+
+tasks.withType<JacocoReport> {
+    reports {
+        xml.isEnabled = true
+        html.isEnabled = true
+    }
+}
+
+tasks.withType<Test> {
+    // TODO: re-enable when TestFX (or the underlying JavaFX problem) is fixed
+    println("UI tests will not be run due to TestFX being broken when headless on Java 10.")
+    println("See: https://github.com/javafxports/openjdk-jfx/issues/66")
+    // Link: https://github.com/javafxports/openjdk-jfx/issues/66
+    useJUnitPlatform {
+        excludeTags("UI")
+    }
+}
+
+tasks.withType<Javadoc> {
+    isFailOnError = false
+}
+
+dependencies {
+}
+
+val nativeShadowTasks = NativePlatforms.values().map { platform ->
+    tasks.create<ShadowJar>("shadowJar-${platform.platformName}") {
+        classifier = platform.platformName
+        configurations = listOf(
+                project.configurations.compile,
+                project.configurations.getByName(platform.platformName)
+        )
+        from(
+                java.sourceSets["main"].output
+        )
+    }
+}
+
+tasks.create("shadowJarAllPlatforms") {
+    nativeShadowTasks.forEach {
+        this.dependsOn(it)
+    }
+}
+
+tasks.withType<ShadowJar>().configureEach {
+    exclude("module-info.class")
+}
+
+val sourceJar = task<Jar>("sourceJar") {
+    description = "Creates a JAR that contains the source code."
+    from(java.sourceSets["main"].allSource)
+    classifier = "sources"
+}
+
+val javadocJar = task<Jar>("javadocJar") {
+    dependsOn("javadoc")
+    description = "Creates a JAR that contains the javadocs."
+    from(java.docsDir)
+    classifier = "javadoc"
+}
+
+publishing {
+    publications {
+        create<MavenPublication>("app") {
+            groupId = "edu.wpi.first.outlineviewer"
+            artifactId = "outlineviewer"
+            version = project.version as String
+            nativeShadowTasks.forEach {
+                artifact(it) {
+                    classifier = it.classifier
+                }
+            }
+            artifact(sourceJar)
+            artifact(javadocJar)
+        }
+    }
+}
+
+dependencies {
+}
+
 /**
- * @return [edu.wpi.first.wpilib.versioning.WPILibVersioningPluginExtension.version] value or null
+ * @return publishVersion property if exists, otherwise
+ * [edu.wpi.first.wpilib.versioning.WPILibVersioningPluginExtension.version] value or fallback
  * if that value is the empty string.
  */
-fun getWPILibVersion(): String? = if (WPILibVersion.version != "") WPILibVersion.version else null
+fun getWPILibVersion(fallback: String = "v0.0.0"): String {
+    if (project.hasProperty("publishVersion")) {
+        val publishVersion: String by project
+        return publishVersion
+    } else if (WPILibVersion.version != "") {
+        return WPILibVersion.version
+    } else {
+        return fallback
+    }
+}
 
-task<Wrapper>("wrapper") {
-    gradleVersion = "4.1"
+tasks.withType<Wrapper>().configureEach {
+    gradleVersion = "4.9"
 }
 
 /**
  * Retrieves the [java][org.gradle.api.plugins.JavaPluginConvention] project convention.
  */
-val Project.`java`: org.gradle.api.plugins.JavaPluginConvention get() =
-    convention.getPluginByName("java")
+val Project.`java`: org.gradle.api.plugins.JavaPluginConvention
+    get() =
+        convention.getPluginByName("java")
 
 /**
  * Retrieves the [checkstyle][org.gradle.api.plugins.quality.CheckstyleExtension] project extension.
  */
-val Project.`checkstyle`: org.gradle.api.plugins.quality.CheckstyleExtension get() =
-    extensions.getByName("checkstyle") as org.gradle.api.plugins.quality.CheckstyleExtension
+val Project.`checkstyle`: org.gradle.api.plugins.quality.CheckstyleExtension
+    get() =
+        extensions.getByName("checkstyle") as org.gradle.api.plugins.quality.CheckstyleExtension
 
 /**
  * Configures the [checkstyle][org.gradle.api.plugins.quality.CheckstyleExtension] project extension.
@@ -228,35 +257,12 @@ fun Project.`checkstyle`(configure: org.gradle.api.plugins.quality.CheckstyleExt
 /**
  * Retrieves the [pmd][org.gradle.api.plugins.quality.PmdExtension] project extension.
  */
-val Project.`pmd`: org.gradle.api.plugins.quality.PmdExtension get() =
-    extensions.getByName("pmd") as org.gradle.api.plugins.quality.PmdExtension
+val Project.`pmd`: org.gradle.api.plugins.quality.PmdExtension
+    get() =
+        extensions.getByName("pmd") as org.gradle.api.plugins.quality.PmdExtension
 
 /**
  * Configures the [pmd][org.gradle.api.plugins.quality.PmdExtension] project extension.
  */
 fun Project.`pmd`(configure: org.gradle.api.plugins.quality.PmdExtension.() -> Unit) =
         extensions.configure("pmd", configure)
-
-/**
- * Retrieves the [findbugs][org.gradle.api.plugins.quality.FindBugsExtension] project extension.
- */
-val Project.`findbugs`: org.gradle.api.plugins.quality.FindBugsExtension get() =
-    extensions.getByName("findbugs") as org.gradle.api.plugins.quality.FindBugsExtension
-
-/**
- * Configures the [findbugs][org.gradle.api.plugins.quality.FindBugsExtension] project extension.
- */
-fun Project.`findbugs`(configure: org.gradle.api.plugins.quality.FindBugsExtension.() -> Unit) =
-        extensions.configure("findbugs", configure)
-
-/**
- * Retrieves the [junitPlatform][org.junit.platform.gradle.plugin.JUnitPlatformExtension] project extension.
- */
-val Project.`junitPlatform`: org.junit.platform.gradle.plugin.JUnitPlatformExtension get() =
-    extensions.getByName("junitPlatform") as org.junit.platform.gradle.plugin.JUnitPlatformExtension
-
-/**
- * Configures the [junitPlatform][org.junit.platform.gradle.plugin.JUnitPlatformExtension] project extension.
- */
-fun Project.`junitPlatform`(configure: org.junit.platform.gradle.plugin.JUnitPlatformExtension.() -> Unit) =
-        extensions.configure("junitPlatform", configure)
